<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profilemenu.MeasurementsDialogFragment">

    <EditText
        android:id="@+id/etWeightValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/weight"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/leftGuideline"
        app:layout_constraintRight_toRightOf="@id/rightGuideline"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/etHeightValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/height"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/etWeightValue"
        app:layout_constraintLeft_toLeftOf="@id/leftGuideline"
        app:layout_constraintRight_toRightOf="@id/rightGuideline"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/etWeightGoalValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/weight_goal"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/etHeightValue"
        app:layout_constraintLeft_toLeftOf="@id/leftGuideline"
        app:layout_constraintRight_toRightOf="@id/rightGuideline"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/etStepsGoalValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/daily_steps"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/etWeightGoalValue"
        app:layout_constraintLeft_toLeftOf="@id/leftGuideline"
        app:layout_constraintRight_toRightOf="@id/rightGuideline"
        android:importantForAutofill="no"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>