<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.workoutmenu.WorkoutMenuFragment">

    <TextView
        android:id="@+id/tvWalkingMode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/trebucbd"
        android:gravity="center_horizontal"
        android:text="@string/walking"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/topGuideline"
        app:layout_constraintLeft_toLeftOf="@id/leftGuideline"
        app:layout_constraintRight_toLeftOf="@id/tvRunningMode" />

    <TextView
        android:id="@+id/tvRunningMode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/trebucbd"
        android:gravity="center_horizontal"
        android:text="@string/running"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/topGuideline"
        app:layout_constraintLeft_toRightOf="@id/tvWalkingMode"
        app:layout_constraintRight_toLeftOf="@id/tvCyclingMode" />

    <TextView
        android:id="@+id/tvCyclingMode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/trebucbd"
        android:gravity="center_horizontal"
        android:text="@string/cycling"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/topGuideline"
        app:layout_constraintLeft_toRightOf="@id/tvRunningMode"
        app:layout_constraintRight_toRightOf="@id/rightGuideline" />

    <LinearLayout
        android:id="@+id/llGoalsAndMeasurements"
        style="@style/white_style"
        android:layout_width="0dp"
        android:layout_height="330dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/ivMap"
        app:layout_constraintLeft_toLeftOf="@id/leftGuideline"
        app:layout_constraintRight_toRightOf="@id/rightGuideline"
        app:layout_constraintTop_toBottomOf="@id/tvRunningMode">

        <TextView
            android:id="@+id/tvChallenges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/trebucbd"
            android:text="@string/challenges"
            android:textColor="@color/primary"
            android:textSize="16sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/challengeRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>

    <ImageView
        android:id="@+id/ivMap"
        style="@style/white_style"
        android:layout_width="285dp"
        android:layout_height="226dp"
        android:layout_marginBottom="45dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/map"
        android:padding="12dp"
        android:src="@drawable/map"
        android:tintMode="multiply"
        app:layout_constraintBottom_toTopOf="@+id/tb_navigation"
        app:layout_constraintLeft_toLeftOf="@id/leftGuideline"
        app:layout_constraintRight_toRightOf="@id/rightGuideline"
        app:tint="#888888" />

    <Button
        android:id="@+id/btnStartWorkout"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:background="@drawable/round_blue"
        android:fontFamily="@font/trebucbd"
        android:padding="0dp"
        android:text="@string/go"
        android:textSize="36sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/ivMap"
        app:layout_constraintLeft_toLeftOf="@id/ivMap"
        app:layout_constraintRight_toRightOf="@id/ivMap"
        app:layout_constraintTop_toBottomOf="@id/ivMap" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.06" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/tb_navigation"
        style="@style/Widget.MaterialComponents.BottomNavigationView.PrimarySurface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>
